* Classes TitleListDependency and TitleDependency have been removed, as they
  have been found unused in core and extensions for a long time.
* (bug 57098) SpecialPasswordReset now obeys returnto parameter
* (bug 37812) ResourceLoader will notice when a module's definition changes and
  recompile it accordingly.
* (bug 57201) SpecialRecentChangesFilters hook is now executed for feeds.

=== API changes in 1.23 ===
* (bug 54884) action=parse&prop=categories now indicates hidden and missing
  categories.
* action=query&meta=filerepoinfo now returns additional information for each
  repo.
* EditPage::spamPage() was deprecated since 1.17 and has been removed.
* action=parse&prop=languageshtml was deprecated in 1.18 and will be removed in
  MediaWiki 1.24.
* action=parse now has disabletoc flag to disable table of contents in output.
* SpecialRecentChanges::feedSetup() was removed.
* (bug 25702) list=allcategories, list=allimages, list=alllinks, list=allpages,
  list=deletedrevs and list=filearchive did not handle case-sensitivity
  properly for all parameters.
* ApiQueryBase::titlePartToKey allows an extra parameter that indicates the
  namespace in order to properly capitalize the title part.
* Removed classes:
  - TitleDependency
  - TitleListDependency
* Renamed classes:
  - CdbReader_DBA to CdbReaderDBA
  - CdbReader_PHP to CdbReaderPHP
  - CdbWriter_DBA to CdbWriterDBA
  - CdbWriter_PHP to CdbWriterPHP
  - DiffOp_Add to DiffOpAdd
  - DiffOp_Change to DiffOpChange
  - DiffOp_Copy to DiffOpCopy
  - DiffOp_Delete to DiffOpDelete
  - HWLDF_WordAccumulator to HWLDFWordAccumulator
  - LBFactory_Fake to LBFactoryFake
  - LBFactory_Multi to LBFactoryMulti
  - LBFactory_Simple to LBFactorySimple
  - LBFactory_Single to LBFactorySingle
  - LCStore_Accel to LCStoreAccel
  - LCStore_CDB to LCStoreCDB
  - LCStore_DB to LCStoreDB
  - LCStore_Null to LCStoreNull
  - LoadBalancer_Single to LoadBalancerSingle
  - LoadMonitor_MySQL to LoadMonitorMySQL